--- a/.classpath
+++ b/.classpath
@@ -2,15 +2,14 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java/com/nedap/university/Protocol"/>
 	<classpathentry kind="src" path="src/main/java/com/nedap/university/exampleClasses"/>
+	<classpathentry kind="src" path="src/main/java/com/nedap/university/communication"/>
+	<classpathentry kind="src" path="src/main/java/com/nedap/university/file-manipulation"/>
+	<classpathentry kind="src" path="src/main/java/com/nedap/university/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
